hphp/hack/test/typecheck/reified_generics/function_soft_reification.php.exp
File "function_soft_reification.php", line 12, characters 3-15:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "function_soft_reification.php", line 5, characters 10-20:
  Definition is here
File "function_soft_reification.php", line 15, characters 3-11:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "function_soft_reification.php", line 6, characters 10-16:
  Definition is here
File "function_soft_reification.php", line 28, characters 15-20:
Terase is not reified, it cannot be used as a reified type argument (Typing[4305])
  File "function_soft_reification.php", line 5, characters 39-39:
  T is reified
File "function_soft_reification.php", line 29, characters 15-19:
Tsoft is soft reified, it cannot be used as a reified type argument (Typing[4305])
  File "function_soft_reification.php", line 5, characters 39-39:
  T is reified
File "function_soft_reification.php", line 32, characters 11-16:
Terase is not reified, it cannot be used as a reified type argument (Typing[4305])
  File "function_soft_reification.php", line 6, characters 24-24:
  T is reified
File "function_soft_reification.php", line 33, characters 11-15:
Tsoft is soft reified, it cannot be used as a reified type argument (Typing[4305])
  File "function_soft_reification.php", line 6, characters 24-24:
  T is reified
